--- a/portfolio.html
+++ b/portfolio.html
@@ -14,6 +14,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
     />
+    <link rel="stylesheet" href="./css/main.min.css" />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Portfolio</title>
   </head>
@@ -22,32 +23,37 @@
       <div class="container container-nav">
         <nav class="nav">
           <a class="link logo-link" href="">
-            <span class="logocolor">Web</span><span class="logo">Studio</span>
+            <span class="logocolor">Web</span
+            ><span class="logo__dark">Studio</span>
           </a>
-          <ul class="list-nav">
-            <li class="list-item">
-              <a class="nav-link" href="./index.html">Студія</a>
+          <ul class="nav__list">
+            <li>
+              <a class="nav__link" href="./index.html">Студія</a>
             </li>
-            <li class="list-item">
-              <a class="nav-link blue-link nav-aktive" href="./portfolio.html"
+            <li>
+              <a
+                class="nav__link blue__link nav--aktive"
+                href="./portfolio.html"
                 >Портфоліо</a
               >
             </li>
-            <li class="list-item"><a class="nav-link" href="">Контакти</a></li>
+            <li><a class="nav__link" href="">Контакти</a></li>
           </ul>
         </nav>
+
         <!-- Контактні дані -->
-        <ul class="contacts-list">
-          <li class="list-item">
-            <a class="link-mail" href="mailto:info@devstudio.com">
+
+        <ul class="contacts__list">
+          <li class="contacts__item">
+            <a class="contacts__links" href="mailto:info@devstudio.com">
               <svg class="envelope" width="16" height="18">
                 <use href="./images/sprite.svg#envelope"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
-          <li class="list-item">
-            <a class="link-tel" href="tel:+380961111111">
+          <li class="contacts__item">
+            <a class="contacts__links" href="tel:+380961111111">
               <svg class="smartphone" width="16" height="18">
                 <use href="./images/sprite.svg#smartphone"></use>
               </svg>
@@ -65,19 +71,19 @@
           <h1 class="visually-hidden">Наше поротфоліо</h1>
           <ul class="filtr-list">
             <li>
-              <button class="filtr" type="button">Усі</button>
+              <button class="filtr-btn" type="button">Усі</button>
             </li>
             <li>
-              <button class="filtr" type="button">Веб-сайти</button>
+              <button class="filtr-btn" type="button">Веб-сайти</button>
             </li>
             <li>
-              <button class="filtr" type="button">Додатки</button>
+              <button class="filtr-btn" type="button">Додатки</button>
             </li>
             <li>
-              <button class="filtr" type="button">Дизайн</button>
+              <button class="filtr-btn" type="button">Дизайн</button>
             </li>
             <li>
-              <button class="filtr" type="button">Маркетинг</button>
+              <button class="filtr-btn" type="button">Маркетинг</button>
             </li>
           </ul>
 
@@ -307,40 +313,40 @@
     </main>
     <!-- Підвал -->
     <footer class="footer">
-      <div class="container footer-container">
-        <div class="address-wrapper">
+      <div class="footer-container container">
+        <div class="footer__wrapper">
           <a class="link" href="./index.html">
-            <span class="footer-logocolor">Web</span
-            ><span class="footer-logo">Studio</span>
+            <span class="logocolor">Web</span
+            ><span class="logo__light">Studio</span>
           </a>
-          <address class="address">
-            <ul class="address-list">
-              <li class="footer-item">
+          <address class="footer__address">
+            <ul class="footer__list">
+              <li class="footer__item">
                 <a
-                  class="address-link"
-                  href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5383858,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+                  class="footer__address--link"
+                  href="https://goo.gl/maps/rnJjQzde75K3HHCh7"
                   >м. Київ, пр-т Лесі Українки, 26</a
                 >
               </li>
-              <li class="footer-item">
-                <a class="contacts-link" href="mailto:info@devstudio.com"
+              <li class="footer__item">
+                <a class="footer__link" href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
-              <li class="footer-item">
-                <a class="contacts-link" href="tel:++380961111111"
+              <li class="footer__item">
+                <a class="footer__link" href="tel:++380961111111"
                   >+38 096 111 11 11</a
                 >
               </li>
             </ul>
           </address>
         </div>
-        <div class="social-wrapper">
-          <p class="call">приєднуйтесь</p>
+        <div class="footer__social">
+          <p class="footer__call">приєднуйтесь</p>
           <ul class="socials list">
-            <li class="social-item">
+            <li class="footer__social--item">
               <a
-                class="social-link-footer"
+                class="footer__social--link"
                 href="https://instagram.com"
                 target="_blank"
                 rel="noopener noreferrer"
@@ -351,9 +357,9 @@
                 </svg>
               </a>
             </li>
-            <li class="social-item">
+            <li class="footer__social--item">
               <a
-                class="social-link-footer"
+                class="footer__social--link"
                 href="https://twitter.com"
                 target="_blank"
                 rel="noopener noreferrer"
@@ -364,9 +370,9 @@
                 </svg>
               </a>
             </li>
-            <li class="social-item">
+            <li class="footer__social--item">
               <a
-                class="social-link-footer"
+                class="footer__social--link"
                 href="https://facebook.com"
                 target="_blank"
                 rel="noopener noreferrer"
@@ -377,9 +383,9 @@
                 </svg>
               </a>
             </li>
-            <li class="social-item">
+            <li class="footer__social--item">
               <a
-                class="social-link-footer"
+                class="footer__social--link"
                 href="https://linkedin.com"
                 target="_blank"
                 rel="noopener noreferrer"
@@ -392,20 +398,20 @@
             </li>
           </ul>
         </div>
-        <div class="footer-subscribe">
-          <p class="subscribe-title">Підпишіться на розсилку</p>
-          <form class="subscribe-form">
+        <div class="subscribe">
+          <p class="subscribe__title">Підпишіться на розсилку</p>
+          <form class="subscribe__form">
             <input
               type="text"
-              class="input-subscribe-form"
+              class="subscribe__form--input"
               placeholder="E-mail"
               required
             />
-            <button type="submit" class="subscribe-btn">
-              <svg class="icon-send" width="24" height="24">
+            <button type="submit" class="subscribe__form--btn">
+              <span class="subscribe__form--btn-text">Підписатися</span>
+              <svg class="subscribe__form--icon-send" width="24" height="24">
                 <use href="./images/sprite.svg#icon-send"></use>
               </svg>
-              <span class="footer-subscribe-text">Підписатися</span>
             </button>
           </form>
         </div>
